Fix FAQ page minor layout issues

--- a/source/stylesheets/components/_curved-section.scss
+++ b/source/stylesheets/components/_curved-section.scss
@@ -37,6 +37,11 @@
 	36px auto;
 }
 
+.curved-section--faq-contact {
+	padding-top: $gutter * 2;
+	padding-bottom: $gutter;
+}
+
 .curved-section--ue {
 	color: palette('white');
 
@@ -77,9 +82,6 @@
 	image('twitter__purple.svg'),
 	image('twitter__dark-blue--flipped.svg');
 	background-color: palette('yellow');
-
-	@media screen and (min-width: breakpoint('desktop')) {
-	}
 }
 
 .curved-section--robos-por-todos-os-lados {
